--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
    <head>
       <title>Leaflet sample</title>
-      <link rel = "stylesheet" href = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
-      <script src = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+      <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.3/leaflet.css"/>
+      <script src = "https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.3/leaflet.js"></script>
       <script src="js/kml.js"></script>
       <script src="plugins/leaflet.ajax.min.js"></script>
       <style>
