--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
    </style>
 
    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 </head>
 
 <body>
    <h1 id="title">SIRI GARDEN</h1>
+   <textarea id="textarea_nodes"></textarea>
+      
    <div id="map"></div>
    <div id="my-content">
       <h3 id="content-title">Title</h3>
